adam cheyer link corrected thanks @warunsl

--- a/_posts/2013-04-22-summer-2013-goals.md
+++ b/_posts/2013-04-22-summer-2013-goals.md
@@ -6,7 +6,7 @@ category: personal
 tags: [wishlist, goals]
 ---
 
-Summer is coming, and this summer I would be doing an internship at Sunnyvale. The post title says **summer 2013 goals** and there is a reason behind it. I recently attended a talk and [Adam Cheyer](www.adam.cheyer.com) spoke. The summary of his talk was **"You can do more than you think you could do"**. So I am going to try something new, verbally state goals and try every bit to accomplish them. 
+Summer is coming, and this summer I would be doing an internship at Sunnyvale. The post title says **summer 2013 goals** and there is a reason behind it. I recently attended a talk and [Adam Cheyer](http://adam.cheyer.com) spoke. The summary of his talk was **"You can do more than you think you could do"**. So I am going to try something new, verbally state goals and try every bit to accomplish them. 
 
 So my aim this summer is to accomplish all the below stated goals:
 
