--- a/_posts/2013-04-22-summer-2013-goals.md
+++ b/_posts/2013-04-22-summer-2013-goals.md
@@ -13,6 +13,7 @@ So my aim this summer is to accomplish all the below stated goals:
 * Visit 50+ restaurants. No repeatations. Try and maximize the variety of cuisines.
 * Hit the Gym everyday.
 * Complete atleast one item in my [bucket list](http://pradeepnayak.in/bucket.html)
+* Finish this [list](http://internproject.io/in-the-bay/Tourism/)
 * Explore the Bay Area.
 * Wine Tasting in Napa Valley.
 * Finish reading one Novel.
